--- a/server/assets/css/global.css
+++ b/server/assets/css/global.css
@@ -190,7 +190,7 @@
 }
 
 .td {
-    @apply px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200 group-hover:text-white group-hover:dark:text-white
+    @apply px-6 py-4 whitespace-nowrap text-sm font-medium group-hover:text-white group-hover:dark:text-white
 }
 
 .th {
