--- a/server/internal/ui/views/pages/dashboard.html
+++ b/server/internal/ui/views/pages/dashboard.html
@@ -1,29 +1,34 @@
-{{template "partials/header" .}}
+<header class="flex p-4 bg-[var(--card)] text-[var(--card-foreground)] w-full justify-between">
+  <div class="flex min-w-[1500px] items-center">
+    <h1 class="text-4xl font-bold">CookieFarm</h1>
+    <img src="/images/logo.png" alt="CookieFarm Logo" class="w-10 h-10 ml-4">
+  </div>
+  <div class="items-start md:items-center">
+     <div class="flex *:lex-col sm:flex-row items-stretch sm:items-center gap-4 sm:w-auto">
+        <input
+           id="flag-input"
+           class="input max-w-60"
+           rows="3"
+           placeholder="Enter the flag"
+           ></input>
+        <button
+           id="submit-flag-btn"
+           class="h-10 px-5 bg-primary text-white font-medium rounded-lg shadow hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-primary transition"
+           onclick="SubmitFlag()"
+           >
+        Submit
+        </button>
+        <p id="flag-submission-status" class="text-sm mt-2 ml-2 text-gray-600 dark:text-neutral-400 self-center">
+           <!-- Status -->
+        </p>
+     </div>
+  </div>
+</header>
 {{template "partials/modal" .}}
-<div class="items-start md:items-center p-4">
-   <div class="flex *:lex-col sm:flex-row items-stretch sm:items-center gap-4 w-full sm:w-auto">
-      <input
-         id="flag-input"
-         class="input max-w-60"
-         rows="3"
-         placeholder="Enter the flag"
-         ></input>
-      <button
-         id="submit-flag-btn"
-         class="h-10 px-5 bg-primary text-white font-medium rounded-lg shadow hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-primary transition"
-         onclick="SubmitFlag()"
-         >
-      Submit
-      </button>
-      <p id="flag-submission-status" class="text-sm mt-2 ml-2 text-gray-600 dark:text-neutral-400 self-center">
-         <!-- Status -->
-      </p>
-   </div>
-</div>
 <div class="flex flex-col">
    <div class="-m-1.5 overflow-x-auto">
-      <div class="p-1.5 min-w-full inline-block align-middle">
-         <div class="flex flex-col max-h-[80vh] border border-gray-200 dark:border-neutral-700 rounded-lg">
+      <div class="p-5 px-16 min-w-full inline-block align-middle">
+         <div class="flex flex-col max-h-[85vh] border border-gray-200 dark:border-neutral-700 rounded-lg  ">
             <div class="overflow-y-auto flex-1">
                <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700 relative">
                   <thead class="bg-gray-50 dark:bg-neutral-700 sticky top-0 ">
@@ -33,6 +38,7 @@
                         <th class="th">Status</th>
                         <th class="th">Submit Time</th>
                         <th class="th">Response Time</th>
+                        <th class="th">Duration</th>
                      </tr>
                   </thead>
                   <tbody
