--- a/server/internal/ui/views/partials/modal.html
+++ b/server/internal/ui/views/partials/modal.html
@@ -3,7 +3,7 @@
 <link href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css"  defer/>
 
 <style>
-.customLook {
+.customTagsSelector {
   --tags-border-color: var(--border);
   --tag-bg: var(--secondary);
   --tag-hover: var(--secondary);
@@ -82,7 +82,7 @@
 
               <div class="grid gap-2">
                 <label for="services">Services <span class="text-red-500">*</span></label>
-                <input id="services" type="text" pattern='^[a-zA-Z_-]+:([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$' placeholder="name:port" class="input customLook" minlength="2" />
+                <input id="services" type="text" pattern='^[a-zA-Z_-]+:([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$' placeholder="name:port" class="input customTagsSelector" minlength="2" />
               </div>
 
               <div class="grid gap-2">
@@ -158,7 +158,7 @@ window.handleConfigSubmit = handleSubmit;
 
 (async () => {
   if (!(await checkConfig())) {
-     document.getElementById("dialog").classList.remove("hidden"); //TO REMOVE ONLY DEBUG
+     // document.getElementById("dialog").classList.remove("hidden"); //TO REMOVE ONLY DEBUG
   }
 })();
 
