--- a/server/internal/ui/views/pages/dashboard.html
+++ b/server/internal/ui/views/pages/dashboard.html
@@ -1,13 +1,13 @@
-<header class="flex p-4 bg-[var(--card)] text-[var(--card-foreground)] w-full justify-between">
-  <div class="flex min-w-[1500px] items-center">
+<header class="flex p-4 bg-[var(--card)] text-[var(--card-foreground)] w-full justify-between mb-2">
+  <div class="flex min-w-[800px] items-center max-w-[1500px]">
+    <img src="/images/logo.png" alt="CookieFarm Logo" class="w-10 h-10 mr-4">
     <h1 class="text-4xl font-bold">CookieFarm</h1>
-    <img src="/images/logo.png" alt="CookieFarm Logo" class="w-10 h-10 ml-4">
   </div>
   <div class="items-start md:items-center">
      <div class="flex *:lex-col sm:flex-row items-stretch sm:items-center gap-4 sm:w-auto">
         <input
            id="flag-input"
-           class="input max-w-60"
+           class="input w-64"
            rows="3"
            placeholder="Enter the flag"
            ></input>
@@ -33,12 +33,55 @@
                <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700 relative">
                   <thead class="bg-gray-50 dark:bg-neutral-700 sticky top-0 ">
                      <tr>
-                        <th class="th">Flag</th>
-                        <th class="th">Service</th>
-                        <th class="th">Status</th>
-                        <th class="th">Submit Time</th>
-                        <th class="th">Response Time</th>
-                        <th class="th">Duration</th>
+                        <th class="th">
+                            <div class="flex">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE --><path fill="currentColor" d="M5 21V4h9l.4 2H20v10h-7l-.4-2H7v7z"/>
+                                    </svg>
+                                </div>
+                                <div class="pl-2">Flag</div>
+                            </div>
+                        </th>
+                        <th class="th">
+                            <div class="flex">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE --><path fill="currentColor" d="M3 19q-.425 0-.712-.288T2 18t.288-.712T3 17h18q.425 0 .713.288T22 18t-.288.713T21 19zm0-3v-1q0-3.2 1.963-5.65T10 6.25V6q0-.825.588-1.412T12 4t1.413.588T14 6v.25q3.1.65 5.05 3.1T21 15v1z"/></svg>
+                                </div>
+                                <div class="pl-2">Service</div>
+                            </div>
+                        </th>
+                        <th class="th">
+                            <div class="flex">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE --><path fill="currentColor" d="M4.25 14q.15.575.363 1.1t.487 1q.225.375.175.8t-.325.7t-.688.263t-.637-.363q-.525-.8-.888-1.65t-.562-1.8q-.1-.4.163-.725T3.025 13t.763.275t.462.725m.85-6.1q-.275.475-.487 1T4.25 10q-.125.45-.462.725T3.025 11t-.687-.3t-.163-.7q.2-.975.575-1.875t.9-1.65q.225-.325.625-.337t.675.262t.325.7t-.175.8m2.775 10.95q.5.3 1.025.525t1.075.375q.425.125.7.45t.275.75t-.3.675t-.7.175q-.925-.2-1.787-.55T6.5 20.375q-.35-.225-.387-.638t.237-.712q.3-.3.725-.35t.8.175m2.15-14.6q-.55.15-1.062.363t-1.013.512q-.4.225-.837.188t-.738-.338t-.275-.7t.375-.625q.825-.525 1.713-.887t1.837-.563q.375-.075.675.175t.3.675t-.275.75t-.7.45M12 15q-1.25 0-2.125-.875T9 12t.875-2.125T12 9t2.125.875T15 12t-.875 2.125T12 15m4.075 3.875q.375-.225.813-.187t.737.337t.275.713t-.375.612q-.8.525-1.7.888t-1.85.562q-.4.075-.712-.175t-.313-.675t.288-.75t.712-.45q.575-.15 1.1-.362t1.025-.513m-2.1-14.625q-.425-.125-.7-.45T13 3.05t.3-.675t.675-.175q.95.2 1.85.563t1.7.887q.35.225.375.625t-.25.7q-.3.3-.725.35T16.1 5.15q-.525-.3-1.05-.525t-1.075-.375m5.775 9.725q.125-.425.463-.7t.762-.275t.687.325t.163.725q-.2.95-.587 1.825T20.35 17.5q-.225.325-.625.35t-.675-.25t-.325-.712t.175-.813q.275-.5.488-1.012t.362-1.088M18.9 7.9q-.225-.375-.175-.8t.325-.7t.675-.25t.625.35q.55.8.925 1.675T21.85 10q.075.4-.188.7t-.687.3t-.763-.275T19.75 10q-.15-.575-.362-1.1t-.488-1"/></svg>
+                                </div>
+                                <div class="pl-2">Status</div>
+                            </div>
+                        </th>
+                        <th class="th">
+                            <div class="flex">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE --><path fill="currentColor" d="M4.4 19.425q-.5.2-.95-.088T3 18.5V14l8-2l-8-2V5.5q0-.55.45-.837t.95-.088l15.4 6.5q.625.275.625.925t-.625.925z"/></svg>
+                                </div>
+                                <div class="pl-2">Submit Time</div>
+                            </div>
+                        </th>
+                        <th class="th">
+                            <div class="flex">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE --><path fill="currentColor" d="M8 18h1.5v-5H12l1 2h5V9h-3l-1-2H8zm4 4q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22"/></svg>
+                                </div>
+                                <div class="pl-2">Response Time</div>
+                            </div>
+                        </th>
+                        <th class="th">
+                            <div class="flex">
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE --><path fill="currentColor" d="M12 11q1.65 0 2.825-1.175T16 7V4H8v3q0 1.65 1.175 2.825T12 11M4 22v-2h2v-3q0-1.525.713-2.863T8.7 12q-1.275-.8-1.987-2.137T6 7V4H4V2h16v2h-2v3q0 1.525-.712 2.863T15.3 12q1.275.8 1.988 2.138T18 17v3h2v2z"/></svg>
+                                </div>
+                                <div class="pl-2">Duration</div>
+                            </div>
+                        </th>
                      </tr>
                   </thead>
                   <tbody
@@ -76,6 +119,25 @@
 
 <script type="module" defer>
    import { uuidv4, sendFlag} from '/js/output.min.js';
+
+   document.body.addEventListener('htmx:afterSettle', () => {
+      document.querySelectorAll('.timestamp').forEach(el => {
+        const raw = parseInt(el.textContent);
+        if (!isNaN(raw)) {
+          el.textContent = formatTimestamp(raw);
+        }
+      });
+    });
+
+    function formatTimestamp(unixTimestamp) {
+      const date = new Date(unixTimestamp * 1000);
+      const pad = (num, size = 2) => String(num).padStart(size, '0');
+      const hours = pad(date.getHours());
+      const minutes = pad(date.getMinutes());
+      const seconds = pad(date.getSeconds());
+      const milliseconds = pad(date.getMilliseconds(), 3);
+      return `${hours}:${minutes}:${seconds}.${milliseconds}`;
+    }
 
    function submitFlag() {
        const flagInput = document.getElementById('flag-input');
@@ -116,47 +178,48 @@
      }
 
 
-       window.SubmitFlag = submitFlag;
+    window.SubmitFlag = submitFlag;
 
-       document.addEventListener("DOMContentLoaded", () => {
-         const limit = {{.Limit}};
-         const storageKey = "flags-offset";
-         let currentPage = 0;
+    document.addEventListener("DOMContentLoaded", () => {
+      const limit = {{.Limit}};
+      const storageKey = "flags-offset";
+      let currentPage = 0;
 
-         const storedOffset = parseInt(localStorage.getItem(storageKey), 10);
-         if (!isNaN(storedOffset) && storedOffset >= 0) {
-           currentPage = Math.floor(storedOffset / limit);
-         }
+      const storedOffset = parseInt(localStorage.getItem(storageKey), 10);
+      if (!isNaN(storedOffset) && storedOffset >= 0) {
+        currentPage = Math.floor(storedOffset / limit);
+      }
 
-         function updateComponents(newPage) {
-           currentPage = newPage;
-           const offset = currentPage * limit;
+      function updateComponents(newPage) {
+        currentPage = newPage;
+        const offset = currentPage * limit;
 
-           localStorage.setItem(storageKey, offset);
+        localStorage.setItem(storageKey, offset);
 
-           htmx.ajax('GET', `/flags/${limit}?offset=${offset}`, {
-             target: '#flag-table-body',
-             swap: 'innerHTML',
-             indicator: '#spinner'
-           });
+        htmx.ajax('GET', `/flags/${limit}?offset=${offset}`, {
+          target: '#flag-table-body',
+          swap: 'innerHTML',
+          indicator: '#spinner'
+        });
 
-           htmx.ajax('GET', `/pagination/${limit}?offset=${offset}`, {
-             target: '#pagination',
-             swap: 'innerHTML'
-           });
-         }
-
-
-         updateComponents(currentPage);
+        htmx.ajax('GET', `/pagination/${limit}?offset=${offset}`, {
+          target: '#pagination',
+          swap: 'innerHTML'
+        });
+      }
 
 
-         document.body.addEventListener('click', function(e) {
-           const tgt = e.target.closest('[data-page]');
-           if (tgt) {
-             e.preventDefault();
-             const pg = parseInt(tgt.dataset.page, 10);
-             if (!isNaN(pg)) updateComponents(pg);
-           }
-         });
-       });
+      updateComponents(currentPage);
+
+
+      document.body.addEventListener('click', function(e) {
+        const tgt = e.target.closest('[data-page]');
+        if (tgt) {
+          e.preventDefault();
+          const pg = parseInt(tgt.dataset.page, 10);
+          if (!isNaN(pg)) updateComponents(pg);
+        }
+      });
+    });
+
 </script>
