Remove HTML comments from SVG icons (less bytes to load #optimize)

--- a/server/internal/ui/views/partials/modal.html
+++ b/server/internal/ui/views/partials/modal.html
@@ -65,7 +65,7 @@
                         <button onclick="document.getElementById('dialog').classList.add('hidden'); document.getElementById('table-head').classList.add('sticky')"
                             class="absolute top-4 right-4 text-muted-foreground hover:text-muted-foreground/80"
                             type="button">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><!-- Icon from Material Symbols by Google - https://github.com/google/material-design-icons/blob/master/LICENSE --><path fill="currentColor" d="M8.4 17L7 15.6l3.6-3.6L7 8.425l1.4-1.4l3.6 3.6l3.575-3.6l1.4 1.4l-3.6 3.575l3.6 3.6l-1.4 1.4L12 13.4z"/></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M8.4 17L7 15.6l3.6-3.6L7 8.425l1.4-1.4l3.6 3.6l3.575-3.6l1.4 1.4l-3.6 3.575l3.6 3.6l-1.4 1.4L12 13.4z"/></svg>
                         </button>
                     </div>
 
