Removed some bullshit

--- a/server/internal/ui/views/layouts/main.html
+++ b/server/internal/ui/views/layouts/main.html
@@ -5,7 +5,7 @@
   <title>CookieFarm</title>
   <link rel="stylesheet" href="/css/output.css">
   <script src="/js/htmx.min.js" defer></script>
-  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body class="bg-[var(--background)] text-[var(--foreground)]">
   <main class="p-4">
